[gd_scene load_steps=3 format=3 uid="uid://br3f0rurcrxxy"]

[ext_resource type="Script" uid="uid://d35vk0rfj2jqg" path="res://Player/inventory/InventorySlot.gd" id="1_6oflj"]
[ext_resource type="Texture2D" uid="uid://8fyvgp7a62tm" path="res://Player/inventory/InventorySlot.png" id="2_fndfj"]

[node name="InventorySlot" type="TextureButton"]
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_fndfj")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_6oflj")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
